test/valid/41625_maybe/TestFromJust.plume

/**
* Test FromJust method from MaybeInteger
* 
* @author fc41625@alunos.fc.ul.pt Fabio Botelho 
* @version $id$ 
*/

class TestFromJust extends Object is 
	method main : () -> String is 
	  (new JustInteger(1) as MaybeInteger).fromJust().toString() 
		//expect 1
	