test/invalid/InvalidSyntaxNewOperator/InvalidSyntaxNewOperator.plume
/**
  * Invalid syntax/use of new operator. 
  * Compiles into error.
 *
 * @author fc41625@alunos.fc.ul.pt F‡bio Botelho 
 * @version $id$ 
 *
 */
 
 class InvalidSyntaxNewOperator extends Object is 
 	method m : () -> String() is
 		//invalid syntax.  
 		new "String" 